--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "vant": "^2.5.4",
     "vue": "^2.6.11",
     "vue-router": "^3.1.5",
-    "vuex": "^3.1.2"
+    "vuex": "^3.1.2",
+    "vuex-persistedstate": "^2.7.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.2.0",
